--- a/SmartTable/src/app/header/header.component.html
+++ b/SmartTable/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="container-header">
-        <a class="navbar-brand" href="#">SmartTable</a>
+        <a class="navbar-brand" href="#"><img border="0" src="http://localhost:3000/images/vote.jpg" width="50" height="50"></a>
       </div>
       <ul class="nav navbar-nav">
         <li class="active"><a routerLink="/home">Home</a></li>
