getting zone info on UI

--- a/SmartTable/src/app/home/home.component.html
+++ b/SmartTable/src/app/home/home.component.html
@@ -2,4 +2,12 @@
   <h1>Hello World - {{username}}</h1>
   <br/> Hello : 
   <input type = "text" [(ngModel)] = "username" >
+  <br/>
+  <br/>
+  <h2>{{user.aclObj.zoneInfo.name}}: </h2>
+  <select>
+    <option *ngFor="let userAccess of user.getKendraList(); let i = index" value = {{userAccess.id}}>
+      {{userAccess.name}}
+    </option>  
+  </select>
 </div>
