--- a/SmartTable/src/app/home/home.component.html
+++ b/SmartTable/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div style="text-align:center">
-  <h1>Hello World - {{username}}</h1>
+  <h1>Hello World - ></h1>
   <br/> Hello : 
   <input type = "text" [(ngModel)] = "username" >
   <br/>
