--- a/SmartTable/src/app/inventory/inventory.component.css
+++ b/SmartTable/src/app/inventory/inventory.component.css
@@ -1,1 +1,5 @@
 .well.custom-well-small {width: 600px; margin:0 auto;}
+.table-striped>tbody>tr:nth-child(odd)>td,
+.table-striped>tbody>tr:nth-child(odd)>th {
+	background-color: #f9c177;
+}
