Dynamic menu and use of roles

--- a/SmartTable/src/app/app.component.html
+++ b/SmartTable/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div>
+    <div class="col-sm-8 col-sm-offset-2 text-center">
+  <app-alert></app-alert>
+  </div>
   <router-outlet></router-outlet>
 </div>
