--- a/SmartTable/src/app/home/home.component.html
+++ b/SmartTable/src/app/home/home.component.html
@@ -1,13 +1,4 @@
+<app-header></app-header>
 <div style="text-align:center">
-  <h1>Hello World - ></h1>
-  <br/> Hello : 
-  <input type = "text" [(ngModel)] = "username" >
-  <br/>
-  <br/>
-  <h2>{{user.aclObj.zoneInfo.name}}: </h2>
-  <select>
-    <option *ngFor="let userAccess of user.getKendraList(); let i = index" value = {{userAccess.id}}>
-      {{userAccess.name}}
-    </option>  
-  </select>
+  <h1>Hello World - ></h1>  
 </div>
