--- a/SmartTable/src/app/login-form/login-form.component.html
+++ b/SmartTable/src/app/login-form/login-form.component.html
@@ -4,10 +4,19 @@
       <h1 class="text-center login-title">Login to SmartTable</h1>
       <div class="account-wall">
         <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
-        <form class="form-signin" (submit)="loginUser($event)">
-          <input type="text" class="form-control" placeholder="Email" required autofocus>
-          <input type="password" class="form-control" placeholder="Password" required>
-          <button class="btn btn-lg btn-primary btn-block" type="submit"> Sign in</button>
+        <form class="form-signin" (ngSubmit)="f.form.valid && loginUser($event)" #f="ngForm" novalidate>
+          <div class="form-group" [ngClass]="{'has-error': f.submitted && !username.valid}">
+              <input type="text" class="form-control" name="username" [(ngModel)]="model.username" #username="ngModel" placeholder="Username" required autofocus>
+              <div *ngIf="f.submitted && !username.valid" class="help-block">Username is required</div>
+          </div>
+          <div class="form-group" [ngClass]="{'has-error': f.submitted && !password.valid}">
+              <input type="password" class="form-control" name="password" [(ngModel)]= "model.password" #password="ngModel" placeholder="Password" required>
+              <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
+          </div>
+          <div class="form-group">
+              <button [disabled]="loading" class="btn btn-lg btn-primary btn-block" type="submit"> Sign in</button>
+          </div>
+          
           <label class="checkbox pull-left">
             <input type="checkbox" value="remember-me">
             Rember me
