--- a/SmartTable/src/app/inventory/inventory.component.html
+++ b/SmartTable/src/app/inventory/inventory.component.html
@@ -4,7 +4,7 @@
     <div class="row ">
         <div [ngClass]="{'col-sm-3':currentUser.accessRole.id === 2, 'col-sm-4': currentUser.accessRole.id !== 2}">
         <span class="label label-default">Zone</span>
-        <select class="selectpicker" [(ngModel)]="selectedZone">
+        <select class="selectpicker" [(ngModel)]="selectedZoneId" (change)="zoneChange($event)">
             <option *ngFor="let zone of currentUser.zoneInfoList; let i = index" value={{zone.id}}>
               {{zone.name}}
             </option>
@@ -12,7 +12,7 @@
       </div>
       <div [ngClass]="{'col-sm-3':currentUser.accessRole.id === 2, 'col-sm-4': currentUser.accessRole.id !== 2}">
           <span class="label label-default">Kendra</span>
-        <select class="selectpicker" [(ngModel)]="selectedKendra">
+        <select class="selectpicker" [(ngModel)]="selectedKendraId" (change)="kendraChange($event)">
             Kendra:<option *ngFor="let kendraInfo of currentUser.kendraInfoList; let i = index" value={{kendraInfo.id}}>
             {{kendraInfo.name}}
           </option>
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <div *ngIf="inventoryService.isInventoryDataAvailable">
+  <div [hidden]="!inventoryService.isInventoryDataAvailable">
     <div class="table-responsive table-condensed">
     <table class="table table-striped table-bordered" >
       <thead>
@@ -66,8 +66,24 @@
           <td>{{equipmentInfo.inventory.contact1_email}}</td>
           <td>{{equipmentInfo.inventory.contact2_name}}</td>
           <td>{{equipmentInfo.inventory.contact2_phone}}</td>
-          <td>{{equipmentInfo.inventory.contact2_email}}</td>
-          
+          <td>{{equipmentInfo.inventory.contact2_email}}</td>          
+        </tr>
+        <tr>
+            <td><button type="button" class="btn btn-link" (click)="addEquipment()">Add </button></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
       </tbody>
     </table>
