addEquipment Cancel button functionality added

--- a/SmartTable/src/app/inventory/add-edit-equipment/add-edit-equipment.component.html
+++ b/SmartTable/src/app/inventory/add-edit-equipment/add-edit-equipment.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
   </div>
-  <div class="well well-sm custom-well custom-well-small">
+  <div class="well well-sm custom-well custom-well-equipment">
     <form>
       <div class="form-group row">
         <div class='col-sm-4'>
