--- a/SmartTable/src/app/alert/alert.component.html
+++ b/SmartTable/src/app/alert/alert.component.html
@@ -1,3 +1,4 @@
 <div *ngIf="message" [ngClass]="{'alert': message, 'alert-success': message.type==='success', 'alert-danger': message.type === 'error'}">
-  {{message.text.error}}
+  {{message.text}}  
+  <button type="button" class="btn btn-primary float-right" (click)="clearMessage()">X </button>
 </div>
