rest call security

--- a/SmartTable/src/app/inventory/inventory-user-admin/inventory-user-admin.component.html
+++ b/SmartTable/src/app/inventory/inventory-user-admin/inventory-user-admin.component.html
@@ -15,7 +15,7 @@
           <th>Last Name</th>
           <th>Contact Number</th>
           <th>Email</th>
-          <th>Enabled</th>
+          <th>Password Reset</th>
           <th>Default Password</th>
           <th>Last Accessed On</th>
         </tr>
@@ -29,7 +29,7 @@
           <td>{{userRole.user.last_name}}</td>
           <td>{{userRole.user.contact_number}}</td>
           <td>{{userRole.user.email}}</td>
-          <td>{{userRole.user.enabled}}</td>
+          <td>{{userRole.user.passwordReset}}</td>
           <td>{{userRole.user.default_password}}</td>
           <td>{{userRole.user.last_accessed_on | date: 'MM/dd/yyyy'}}</td>
         </tr>
