--- a/SmartTable/src/app/inventory/inventory.component.html
+++ b/SmartTable/src/app/inventory/inventory.component.html
@@ -27,14 +27,14 @@
     </div>
   </div>
 
-  <div [hidden]="!inventoryService.isInventoryDataAvailable">
+  <div [hidden]="!inventoryService.isInventoryDataAvailable">  
     <div class="table-responsive table-condensed">
     <table class="table table-striped table-bordered" >
       <thead>
         <tr>
           <th></th>
           <th></th>
-          <th>Equipment-Name</th>
+          <th sortable-column="name">Equipment-Name</th>
           <th>Serial-Model-#</th>
           <th>inUse</th>
           <th>Purchased on</th>
@@ -54,12 +54,30 @@
         
       </thead>
       <tbody>
-        <tr *ngFor="let equipmentInfo of inventoryService.getInventoryInfo(); let i=index">
+        <!--<tr *ngFor="let equipmentInfo of inventoryService.getInventoryInfo(); let i=index">-->
+            <tr *ngFor="let equipmentInfo of inventoryTable; let i=index">
             <!--(click)="deleteEquipment(equipmentInfo.inventory.id)"-->
           <td><button type="button" class="btn btn-link" data-toggle="tooltip" title="Delete" (click)="deleteEquipment(equipmentInfo.inventory.id)"><span class="glyphicon glyphicon-remove"></span> </button></td> 
           <td><button type="button" class="btn btn-link" data-toggle="tooltip" title="Edit" (click)="updateEquipment(equipmentInfo.inventory.id)"><span class="glyphicon glyphicon-pencil"></span> </button></td>          
-          <td>{{getEquipmentTypeName(equipmentInfo.inventory.name)}}</td>
-          <td>{{equipmentInfo.inventory.serialModelNumber}}</td>
+          <td>{{equipmentInfo.equipment_type}}</td>
+          <td>{{equipmentInfo.serialNumber}}</td>
+          <td>{{equipmentInfo.inUse}}</td>
+          <td>{{equipmentInfo.purchasedOn | date: 'MM/dd/yyyy'}}</td>
+          <td>{{equipmentInfo.ownedBy}}</td>
+          <td>{{equipmentInfo.usedSince}}</td>
+          <td>{{equipmentInfo.storedAt}}</td>
+          <td>{{equipmentInfo.name}}</td>
+          <td>{{equipmentInfo.comment}}</td>
+          <td>{{equipmentInfo.contact1_name}}</td>
+          <td>{{equipmentInfo.contact1_phone}}</td>
+          <td>{{equipmentInfo.contact1_email}}</td>
+          <td>{{equipmentInfo.contact2_name}}</td>
+          <td>{{equipmentInfo.contact2_phone}}</td>
+          <td>{{equipmentInfo.contact2_email}}</td>
+          <td>{{equipmentInfo.lastUpdatedOn | date: 'MM/dd/yyyy'}}</td>
+
+          <!-- <td>{{getEquipmentTypeName(equipmentInfo.inventory.name)}}</td> -->
+          <!-- <td>{{equipmentInfo.inventory.serialModelNumber}}</td>
           <td>{{equipmentInfo.inventory.inUse}}</td>
           <td>{{equipmentInfo.inventory.purchasedOn| date: 'MM/dd/yyyy'}}</td>
           <td>{{equipmentInfo.inventory.ownedBy}}</td>
@@ -73,7 +91,7 @@
           <td>{{equipmentInfo.inventory.contact2_name}}</td>
           <td>{{equipmentInfo.inventory.contact2_phone}}</td>
           <td>{{equipmentInfo.inventory.contact2_email}}</td>      
-          <td>{{equipmentInfo.inventory.lastUpdatedOn| date:'MM/dd/yyyy'}}</td>    
+          <td>{{equipmentInfo.inventory.lastUpdatedOn| date:'MM/dd/yyyy'}}</td>     -->
         </tr>
         <tr>
             <td><button type="button" class="btn btn-link" data-toggle="tooltip" title="Add" (click)="addEquipment()"><span class="glyphicon glyphicon-plus"></span> </button></td>
